--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo ciao",
     "start": "nodemon index.js"
-
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,7 @@
   },
   "homepage": "https://github.com/fracerma/get-togheter#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
