--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
     "pg": "^8.0.3",
+    "request": "^2.88.2",
     "sequelize": "^5.21.7",
     "sequelize-cli": "^5.5.1"
   },
