--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "schizzo98",
+    "password": "Ilaria",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres",
@@ -9,7 +9,7 @@
   },
   "test": {
     "username": "postgres",
-    "password": "schizzo98",
+    "password": "Ilaria",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres",
@@ -17,7 +17,7 @@
   },
   "production": {
     "username": "postgres",
-    "password": "schizzo98",
+    "password": "Ilaria",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres",
