--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "postgres",
-    "password": "biar",
+    "password": "schizzo98",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "biar",
+    "password": "schizzo98",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
-    "password": "biar",
+    "password": "schizzo98",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres"
