--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,13 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-socket.io-session": "^1.3.5",
     "nodemon": "^2.0.3",
     "pg": "^8.0.3",
     "request": "^2.88.2",
     "sequelize": "^5.21.7",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {}
 }
