--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "nodemon": "^2.0.3",
     "pg": "^8.0.3",
     "request": "^2.88.2",
