--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,6 @@
   "description": "Web app for let you organize your party",
   "main": "index.js",
   "scripts": {
-    "test": "echo ciao",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -36,5 +35,8 @@
     "sequelize-cli": "^5.5.1",
     "socket.io": "^2.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+    "node": "10.15"
+  }
 }
