--- a/config/config.json
+++ b/config/config.json
@@ -13,11 +13,8 @@
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
-  "production": {
-    "username": "postgres",
-    "password": "Ilaria",
-    "database": "get_together",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
-  }
+  "production": {    
+      "use_env_variable": "DATABASE_URL"     
+    }
+
 }
