--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ k#VS code
 server.cert
 server.key
 
+config/
+
 # Logs
 logs
 *.log
@@ -47,3 +49,4 @@ Icon?
 server.cert
 server.key
 
+server/config/config.json
