--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "Ilaria",
+    "password": "schizzo98",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres"
