--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "biar",
+    "password": "schizzo98",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "biar",
+    "password": "schizzo98",
     "database": "get_together",
     "host": "127.0.0.1",
     "dialect": "postgres"
