--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,18 @@
 {
+  "development": {
+    "username": "postgres",
+    "password": "schizzo98",
+    "database": "get_together",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
+  },
+  "test": {
+    "username": "postgres",
+    "password": "schizzo98",
+    "database": "get_together",
+    "host": "127.0.0.1",
+    "dialect": "postgres"
+  },
   "production": {       
     "use_env_variable": "DATABASE_URL"    
   }
